like unlike posts complete

--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,9 @@
   --blueLight: #9bd1f9;
   --grayText: rgb(101, 119, 134);
   --grayButtonText: rgba(0, 0, 0, 0.34);
+  --green: #23c26b;
+  --greenLight: #e0f2e8;
+  --pinkLight: #f5e1e7;
+  --pink: #e12f66;
   --spacing: 15px;
 }
