--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  padding: 10px;
+  position: sticky;
+  top: 0;
   /* height: 100vh; */
 }
 
