--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -30,13 +30,15 @@
   padding-left: var(--spacing);
 }
 
-.post a {
+.post a,
+.reply a {
   text-decoration: none;
   color: black;
   font-weight: bold;
 }
 
-.post a:hover {
+.post a:hover,
+.reply a:hover {
   text-decoration: underline;
 }
 
@@ -75,4 +77,46 @@
 
 .post__right__like {
   padding: 0 10px;
+}
+
+.reply__textArea {
+  resize: none;
+  margin-left: var(--spacing);
+  outline-width: 0;
+  outline: none;
+  border: none;
+}
+.reply {
+  display: flex;
+  flex-direction: column;
+}
+.reply__topContainer {
+  display: flex;
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  padding: var(--spacing) 0;
+}
+.reply__bottomContainer {
+  display: flex;
+  padding: var(--spacing) 0;
+}
+.reply__bottomContainer > textarea {
+  flex: 1;
+}
+.reply__button {
+  background-color: var(--blue) !important;
+  color: white !important;
+}
+.reply__button:disabled {
+  background-color: var(--blueLight) !important;
+}
+.noBorderBottom {
+  border-bottom: none;
+}
+
+.replyToContainer {
+  display: flex;
+  border-bottom: 1px solid lightgray;
+  padding: var(--spacing);
+  cursor: pointer;
 }
