--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
   --blue: #1fa2f1;
   --blueLight: #9bd1f9;
+  --blueBackground:rgba(212,237,255,0.6);
   --grayText: rgb(101, 119, 134);
   --grayButtonText: rgba(0, 0, 0, 0.34);
   --green: #23c26b;
