--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -5,6 +5,8 @@
   padding: 10px;
   position: sticky;
   top: 0;
+  height: 100vh;
+  border-right: 1px solid lightgray;
   /* height: 100vh; */
 }
 
