fetching chats done

--- a/src/components/messages/Messages.css
+++ b/src/components/messages/Messages.css
@@ -8,28 +8,65 @@
   justify-content: space-between;
   border-bottom: 1px solid lightgray;
 }
-.messages__header >h4{
-    padding: var(--spacing);
+.messages__header > h4 {
+  padding: var(--spacing);
 }
-.messages__header a{
-    text-decoration: none;
-    color: inherit;
+.messages__header a {
+  text-decoration: none;
+  color: inherit;
 }
-.message_container{
+.message_container {
+  display: flex;
+  padding: var(--spacing);
+  border-bottom: 1px solid lightgray;
+  cursor: pointer;
+}
+.message_container:hover{
+    background-color: #f2f2f2;
+}
+.message__imagesContainer{
+    height: 40px;
+    width: 40px;
+    position: relative;
     display: flex;
-    padding:var(--spacing);
-    border-bottom: 1px solid lightgray;
-    cursor: pointer;
+    align-items: center;
+    padding: 5px;
 }
-.messages__content{
-    display: flex;
-    flex-direction: column;
-    margin-left: var(--spacing);   
+.message__imagesContainer > img{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
 }
-.messages__chatName{
-    font-size: medium;
+.messages__groupChatImageContainer img{
+    height: 65%;
+    width: 65%;
+    position: absolute;
+    bottom: 0;
+    border:2px solid white
 }
-.messages__lastChat{
-    font-size: small;
-    color: var(--grayText);
+.messages__groupChatImageContainer > img:first-of-type{
+    top:0;
+    right:0;
+}
+.messages__content {
+  display: flex;
+  flex-direction: column;
+  margin-left: var(--spacing);
+}
+.messages__body > a {
+  text-decoration: none;
+  color: black;
+}
+.messages__chatName {
+  font-size: medium;
+  font-weight: 600;
+}
+.messages__lastChat {
+  font-size: small;
+  color: var(--grayText);
+}
+.ellipsis{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
