--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+html,body{
+  height: 100%;
+  min-height: 100%;
+}
+.MuiGrid-container{
+  height: 100%;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
