--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -1,6 +1,7 @@
 .chat {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 .chat__header {
   border-bottom: 1px solid lightgray;
@@ -50,7 +51,6 @@
 }
 .chat__body {
   flex: 1;
-  overflow-y: auto;
   padding: var(--spacing);
 }
 
