--- a/src/App.css
+++ b/src/App.css
@@ -17,5 +17,17 @@
 }
 .app{
   height: 100%;
+}
 
+.loadingSpinnerContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.loadingSpinner{
+  width: 50%;
+  max-width: 75px;
 }
